replace librespot with spotifyd

--- a/example_config.ini
+++ b/example_config.ini
@@ -11,7 +11,7 @@ wifi_passphrase = ""
 [software]
 airplay_active = true
 pulseaudio_active = true
-librespot_active = true
+spotifyd_active = true
 snapcast_client_active = false
 snapcast_client_hostname = ""
 linein_stream_active = false
