add support for regulatory domain setting
this allows the user to set regdomain to DE, US, etc.
in order to use channel 12 and 13.

--- a/example_config.ini
+++ b/example_config.ini
@@ -7,6 +7,7 @@ hostname = "OtterCastAudio"
 [network]
 wifi_ssid = ""
 wifi_passphrase = ""
+wifi_country = "00"
 
 [software]
 airplay_active = true
