PulseAudio restructuring, USB audio support

--- a/example_config.ini
+++ b/example_config.ini
@@ -16,3 +16,4 @@ spotifyd_active = true
 snapcast_client_active = false
 snapcast_client_hostname = ""
 linein_stream_active = false
+usbaudio_active = false
