Persistent SSH hostkeys

--- a/example_config.ini
+++ b/example_config.ini
@@ -17,3 +17,6 @@ snapcast_client_active = false
 snapcast_client_hostname = ""
 linein_stream_active = false
 usbaudio_active = false
+
+[ssh]
+hostkey = ""
