Feature: Line-In Loopback

--- a/example_config.ini
+++ b/example_config.ini
@@ -16,6 +16,8 @@ spotifyd_active = true
 snapcast_client_active = false
 snapcast_client_hostname = ""
 linein_stream_active = false
+linein_loopback_active = false
+linein_loopback_volume = 40
 usbaudio_active = false
 
 [ssh]
